src/objects/FSTR__PCE_Step_Field_Update__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__DataType__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Destination_Lookup_Field__c</fullName>
        <label>Destination Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Name__c</fullName>
        <inlineHelpText>The field to which the update should be applied.</inlineHelpText>
        <label>Field to Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value_Adjustment__c</fullName>
        <label>Date Adjustment</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value__c</fullName>
        <label>Updated Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__IsChildStepDestination__c</fullName>
        <formula>/* Determines whether this is update has a child step destination. Handles values with __c or __r */

        IF(FSTR__Parent_Step_Name__c != null,
            OR(
                CONTAINS(LOWER(FSTR__Object_Name__c), LOWER(FSTR__Parent_Step_Name__c)),
                AND(
                    OR(
                        CONTAINS(LOWER(FSTR__Parent_Step_Name__c), &quot;__c&quot;),
                        CONTAINS(LOWER(FSTR__Parent_Step_Name__c), &quot;__r&quot;)
                    ),
                    CONTAINS(LOWER(FSTR__Object_Name__c), LOWER(LEFT(FSTR__Parent_Step_Name__c, LEN(FSTR__Parent_Step_Name__c) - 3)))
                )
            ), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Step Destination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__IsChildStepSource__c</fullName>
        <formula>/* Determines whether this is update has a child step source. Handles values with __c or __r */

        IF(FSTR__Parent_Step_Name__c != null,
            OR(
                CONTAINS(LOWER(FSTR__Source_Object__c), LOWER(FSTR__Parent_Step_Name__c)),
                AND(
                    OR(
                        CONTAINS(LOWER(FSTR__Parent_Step_Name__c), &quot;__c&quot;),
                        CONTAINS(LOWER(FSTR__Parent_Step_Name__c), &quot;__r&quot;)
                    ),
                    CONTAINS(LOWER(FSTR__Source_Object__c), LOWER(LEFT(FSTR__Parent_Step_Name__c, LEN(FSTR__Parent_Step_Name__c) - 3)))
                )
            ), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Step Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <inlineHelpText>Field to receive the update.</inlineHelpText>
        <label>Related Object to Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <formula>/* Lookups for parent object name */
FSTR__Step__r.FSTR__Definition__r.FSTR__Object_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Step_Name__c</fullName>
        <formula>/* Lookups for parent object name - either a step object (task or custom), event, or blank */

IF(
FSTR__Step__r.FSTR__Parent_Step__c!=null,
IF(
FSTR__Step__r.FSTR__Parent_Step__r.FSTR__Event_Placeholder__c,
&apos;event&apos;,
LOWER(FSTR__Step__r.FSTR__Parent_Step__r.FSTR__Object_Type_To_Create__c)
),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Step Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Source_Lookup_Field__c</fullName>
        <label>Source Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Step Field Updates</relationshipLabel>
        <relationshipName>PCE_Step_Field_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <inlineHelpText>Choose whether to update to a specific value or by reference to another field.</inlineHelpText>
        <label>Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                    <default>true</default>
                    <label>Value</label>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Record Update</label>
    <nameField>
        <displayFormat>SFU-{000000}</displayFormat>
        <label>Step Field Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>